<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.NavigationFragment.OTPCodeFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:background="#AADCD7"
            android:src="@drawable/baseline_verified_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/otp_verification"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/longtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:visibility="visible"
            android:text="@string/we_will_send_you_an_one_time_otp_code_on_this_mobile_phone_number"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/entermobilephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:visibility="visible"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/enter_your_mobile_number"
            android:textSize="14sp"/>
        <LinearLayout
            android:id="@+id/layout_inputnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:visibility="visible"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_84"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold" />
            <EditText
                android:id="@+id/inputmobile"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/_1234567890"
                android:layout_marginStart="5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="70dp"
            android:background="@color/teal_200" />
        <Button
            android:id="@+id/buttongetotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/teal_700"
            android:textSize="16sp"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:visibility="visible"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/enterotpcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/enter_the_otp_code"
            android:visibility="gone"
            android:fontFamily="@font/poppins_regular"/>

        <LinearLayout
            android:id="@+id/layout_inputcode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            tools:ignore="labelFor"
            android:visibility="gone"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/inputcode1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            />
            <EditText
                android:id="@+id/inputcode2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                />
            <EditText
                android:id="@+id/inputcode3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                />
            <EditText
                android:id="@+id/inputcode4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold" />
            <EditText
                android:id="@+id/inputcode5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                />
            <EditText
                android:id="@+id/inputcode6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_resendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/did_not_received_otp"
                android:fontFamily="@font/poppins_regular"/>
            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/resend_otp"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#C33636"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonverify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/teal_700"
            android:textSize="16sp"
            android:text="@string/verify"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/teal_700"
            android:fontFamily="@font/poppins_bold"
            android:text=" download file "
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>
    <!-- TODO: Update blank fragment layout -->
</FrameLayout>